components/traffic-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-console
spec:
  ports:
    - {name: http, port: 80, targetPort: http}
